examples/start-solid-zaidan-example/src/styles/base.css
/* ... */
.z-context-menu-subcontent {
  @apply shadow-lg;
}

/* MARK: Dialog */
.z-dialog-overlay {
  @apply data-expanded:animate-in data-closed:animate-out data-closed:fade-out-0 data-expanded:fade-in-0 bg-black/10 duration-100 supports-backdrop-filter:backdrop-blur-xs;
}

.z-dialog-content {
  @apply bg-background data-expanded:animate-in data-closed:animate-out data-closed:fade-out-0 data-expanded:fade-in-0 data-closed:zoom-out-95 data-expanded:zoom-in-95 ring-foreground/10 grid max-w-[calc(100%-2rem)] gap-6 rounded-xl p-6 text-sm ring-1 duration-100 sm:max-w-md;
}

.z-dialog-close {
  @apply absolute top-4 right-4;
}

.z-dialog-header {
  @apply gap-2;
}

.z-dialog-footer {
  @apply gap-2;
}

.z-dialog-title {
  @apply leading-none font-medium;
}

.z-dialog-description {
  @apply text-muted-foreground *:[a]:hover:text-foreground text-sm *:[a]:underline *:[a]:underline-offset-3;
}

/* MARK: Drawer */
.z-drawer-overlay {
  @apply data-transitioning:transition-colors data-transitioning:duration-400 bg-black/10 supports-backdrop-filter:backdrop-blur-xs;
}

.z-drawer-content {
  @apply data-transitioning:transition-transform data-transitioning:duration-400 bg-background flex h-auto flex-col text-sm data-[side=bottom]:inset-x-0 data-[side=bottom]:bottom-0 data-[side=bottom]:mt-24 data-[side=bottom]:max-h-[80vh] data-[side=bottom]:rounded-t-xl data-[side=bottom]:border-t data-[side=left]:inset-y-0 data-[side=left]:left-0 data-[side=left]:w-3/4 data-[side=left]:rounded-r-xl data-[side=left]:border-r data-[side=right]:inset-y-0 data-[side=right]:right-0 data-[side=right]:w-3/4 data-[side=right]:rounded-l-xl data-[side=right]:border-l data-[side=top]:inset-x-0 data-[side=top]:top-0 data-[side=top]:mb-24 data-[side=top]:max-h-[80vh] data-[side=top]:rounded-b-xl data-[side=top]:border-b data-[side=left]:sm:max-w-sm data-[side=right]:sm:max-w-sm;
}

.z-drawer-handle {
  @apply bg-muted mx-auto mt-4 hidden h-1.5 w-[100px] shrink-0 rounded-full group-data-[side=bottom]/drawer-content:block;
}

.z-drawer-header {
  @apply gap-0.5 p-4 group-data-[side=bottom]/drawer-content:text-center group-data-[side=top]/drawer-content:text-center md:gap-1.5 md:text-left;
}

.z-drawer-title {
  @apply text-foreground font-medium;
}

.z-drawer-description {
  @apply text-muted-foreground text-sm;
}

.z-drawer-footer {
  @apply gap-2 p-4;
}

/* MARK: Dropdown Menu */
.z-dropdown-menu-content {
  @apply data-expanded:animate-in data-closed:animate-out data-closed:fade-out-0 data-expanded:fade-in-0 data-closed:zoom-out-95 data-expanded:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 ring-foreground/10 bg-popover text-popover-foreground min-w-32 rounded-lg p-1 shadow-md ring-1 duration-100;
}

.z-dropdown-menu-item {
  @apply focus:bg-accent focus:text-accent-foreground data-[variant=destructive]:text-destructive data-[variant=destructive]:focus:bg-destructive/10 dark:data-[variant=destructive]:focus:bg-destructive/20 data-[variant=destructive]:focus:text-destructive data-[variant=destructive]:*:[svg]:text-destructive not-data-[variant=destructive]:focus:**:text-accent-foreground gap-1.5 rounded-md px-1.5 py-1 text-sm [&_svg:not([class*='size-'])]:size-4;
}

.z-dropdown-menu-checkbox-item {
  @apply focus:bg-accent focus:text-accent-foreground focus:**:text-accent-foreground gap-1.5 rounded-md py-1 pr-8 pl-1.5 text-sm [&_svg:not([class*='size-'])]:size-4;
}

.z-dropdown-menu-radio-item {
  @apply focus:bg-accent focus:text-accent-foreground focus:**:text-accent-foreground gap-1.5 rounded-md py-1 pr-8 pl-1.5 text-sm [&_svg:not([class*='size-'])]:size-4;
}

.z-dropdown-menu-item-indicator {
  @apply pointer-events-none absolute right-2 flex items-center justify-center;
}

.z-dropdown-menu-label {
  @apply text-muted-foreground px-1.5 py-1 text-xs font-medium;
}

.z-dropdown-menu-separator {
  @apply bg-border -mx-1 my-1 h-px;
}

.z-dropdown-menu-shortcut {
  @apply text-muted-foreground group-focus/dropdown-menu-item:text-accent-foreground ml-auto text-xs tracking-widest;
}

.z-dropdown-menu-sub-trigger {
  @apply focus:bg-accent focus:text-accent-foreground data-expanded:bg-accent data-expanded:text-accent-foreground not-data-[variant=destructive]:focus:**:text-accent-foreground gap-1.5 rounded-md px-1.5 py-1 text-sm [&_svg:not([class*='size-'])]:size-4;
}

.z-dropdown-menu-sub-content {
  @apply data-expanded:animate-in data-closed:animate-out data-closed:fade-out-0 data-expanded:fade-in-0 data-closed:zoom-out-95 data-expanded:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 ring-foreground/10 bg-popover text-popover-foreground min-w-[96px] rounded-lg p-1 shadow-lg ring-1 duration-100;
}

.z-dropdown-menu-subcontent {
  @apply shadow-lg;
}

/* MARK: Empty */
.z-empty {
  @apply gap-4 rounded-lg border-dashed p-12;
}

.z-empty-header {
  @apply gap-2;
}

.z-empty-media {
  @apply mb-2;
}

.z-empty-media-default {
  @apply bg-transparent;
}

.z-empty-media-icon {
  @apply bg-muted text-foreground flex size-10 shrink-0 items-center justify-center rounded-lg [&_svg:not([class*='size-'])]:size-6;
}

.z-empty-title {
  @apply text-lg font-medium tracking-tight;
}

.z-empty-description {
  @apply text-sm/relaxed;
}

.z-empty-content {
  @apply gap-4 text-sm;
}

/* MARK: Field */
.z-field-set {
  @apply gap-6 has-[>[data-slot=checkbox-group]]:gap-3 has-[>[data-slot=radio-group]]:gap-3;
}

.z-field-legend {
  @apply mb-3 font-medium data-[variant=label]:text-sm data-[variant=legend]:text-base;
}

.z-field-group {
  @apply gap-7 data-[slot=checkbox-group]:gap-3 *:data-[slot=field-group]:gap-4;
}

.z-field {
  @apply data-[invalid=true]:text-destructive gap-3;
}

.z-field-content {
  @apply gap-1;
}
/* ... */

